[workspace]
members = [
  "crates/micro-net-core",
  "crates/micro-net-petgraph",
  "crates/micro-net-algorithms",
  "crates/micro-net-drivers",
  "crates/micro-net-executor",
  "crates/micro-net-report",
  "crates/micro-net-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["micro-net-lab-rs contributors"]
rust-version = "1.78"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
rand_chacha = "0.3"
rayon = "1"
csv = "1"
petgraph = { version = "0.6", features = ["serde-1"] }
