[package]
name = "micro-net-algorithms"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
micro-net-core = { path = "../micro-net-core" }
rand.workspace = true
rand_chacha.workspace = true
serde.workspace = true
