[package]
name = "micro-net-petgraph"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
micro-net-core = { path = "../micro-net-core" }
serde.workspace = true
anyhow.workspace = true
petgraph.workspace = true
rand.workspace = true
rand_chacha.workspace = true
