[package]
name = "micro-net-report"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
micro-net-core = { path = "../micro-net-core" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
csv.workspace = true
